k8s/node-api/stack.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api
  namespace: stack-node-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      labels:
        app: node-api
    spec:
      containers:
        - name: node-api
          image: ECR_REGISTRY/cloud-forge/node-api:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: node-api
  namespace: stack-node-api
spec:
  selector:
    app: node-api
  ports:
    - port: 80
      targetPort: 3000
